<resources>
    <string name="app_name">Messages</string>
    <string name="appeared_app_name">Popula</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="john_smith">John Smith</string>
    <string name="enter_quot_all_quot_for_all_names">(enter \"all\" for all names)</string>
    <string name="name">Name</string>
    <string name="i_am_a_potato">I am a potato</string>
    <string name="enter_quot_all_quot_for_all_messages">(enter \"all\" for all messages)</string>
    <string name="message">Message</string>
    <string name="_100">100</string>
    <string name="_0">0</string>
    <string name="_50">50</string>
    <string name="names_about">Random names obtained from SSA top 1000 names: https://www.ssa.gov/oact/babynames/limits.html</string>
    <string name="words_about">Random words obtained from Word frequency data: https://www.wordfrequency.info/</string>
    <string name="icon_about">App icon from user Wwalczyszyn on Iconfinder: https://www.iconfinder.com/icons/67502/android_chat_messages_r_icon/</string>
</resources>