<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.innovativeutilities.lawrence.popula.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="@dimen/large_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_quot_all_quot_for_all_messages"
            android:textSize="@dimen/small_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/customMessageInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/i_am_a_potato"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="@dimen/medium_text" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/large_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_quot_all_quot_for_all_names"
            android:textSize="@dimen/small_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/customNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/john_smith"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="@dimen/medium_text" />

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/small_border"-->
        <!--android:layout_marginRight="@dimen/small_border">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/_0" />-->

        <!--<View-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1" />-->

        <!--<TextView-->
            <!--android:id="@+id/seek_bar_value"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/_50" />-->

        <!--<View-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/_100" />-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/okButton"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>
</LinearLayout>