<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/totalView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.innovativeutilities.lawrence.popula.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_border"
        android:layout_marginStart="@dimen/small_border"
        android:layout_weight="0"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/names_about"
        android:textSize="@dimen/small_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_border"
        android:layout_marginStart="@dimen/small_border"
        android:layout_weight="0"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/words_about"
        android:textSize="@dimen/small_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_border"
        android:layout_marginStart="@dimen/small_border"
        android:layout_weight="0"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/icon_about"
        android:textSize="@dimen/small_text" />

</LinearLayout>
